# minescript

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
examples/: mc_magic.txt  staff_of_growth.txt
src/: command.rs  compiler.rs  interpreter.rs  lexer.rs  main.rs  md_to_json.rs  parser.rs  tests.rs  types.rs
src/interpreter/: annotations.rs  block.rs  macros.rs  mod.rs  operation.rs  selector_block.rs  store.rs
src/interpreter/annotations/: effect.rs  item.rs
src/interpreter/macros/: effect.rs  item.rs  mod.rs
src/parser/: identifier.rs  mod.rs
src/tests/: e2e.rs  interpreter.rs  lexer.rs  mod.rs  parser.rs
src/types/: command.rs  execute.rs  mod.rs  nbt.rs  repr.rs  selector.rs  syntax.rs  token.rs  versioning.rs
