[package]
name = "minescript"
version = "0.1.0"
edition = "2021"
authors = ["PokeJofeJr4th"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.3", features = ["derive"] }
dotenvy = "0.15.7"
strum = "0.25.0"
strum_macros = "0.25.1"
